update: fix some styling issues; may still have a problem on mobile nav component but will check on a real device after deployment

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ html {
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: rgb(237, 237, 237);
 }
 
 ::-webkit-scrollbar {
@@ -74,17 +74,10 @@ body {
   }
 
   .glass-component {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.15);
     border-radius: 30px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(0px);
-    -webkit-backdrop-filter: blur(0px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-  }
-
-  .glass-header {
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
   }
 
   .glass-card {
